tests/baselines/reference/spellingSuggestionLeadingUnderscores01.errors.txt
tests/cases/compiler/spellingSuggestionLeadingUnderscores01.ts(6,3): error TS2551: Property '___foo' does not exist on type '{ __foo: 10; }'. Did you mean '__foo'?


==== tests/cases/compiler/spellingSuggestionLeadingUnderscores01.ts (1 errors) ====
    // @filename abc.ts
    export declare let a: {
        __foo: 10,
    }
    
    a.___foo
      ~~~~~~
!!! error TS2551: Property '___foo' does not exist on type '{ __foo: 10; }'. Did you mean '__foo'?
    
    // @filename def.ts
    export let b: {
        __foo: number
    }
    
    b = {
        __foo: 100,
    }
    
    